OpenVi 7.0.9 -> OpenVi 7.0.10-dev (Unreleased): Fri Feb 4 12:36:42 2022
        + Use `/var/tmp` for the `vi.recover` directory; on most Linux
          systems, this persists across reboots and gives a higher chance
          of recovery than `/tmp` which is often a memory-backed filesystem
        + New feature: If `ruler` is set, print a percentage after position
        + New feature: If `windowname` is set, always show the file name
        + New feature: If `bserase` (abbrev `bse`) is set, then any newly
          backspaced characters are immediately erased from the screen
        + Handle `SIGQUIT` like `SIGINT`, which prevents `^\` (Control-\)
          from causing ex-mode to abort and drop core; aligns closer to
          Vim's behavior in ex-mode - which uses non-canonical input mode,
          so `^\` doesn't cause a stop.  The rationale for this change is
          because we're using `^\` as a shortcut to enter our ex-mode (which
          for `nex` uses standard canonical line-based input), if `SIGQUIT`
          is unhandled, it's easy to abort by accident by sending more than
          one `^\` in succession, which can happen on lagged connection.
        + Fix a long-standing bug where using `^G` on an empty file would
          include a random garbage byte in the displayed output
        + Reword "Already in the first column" to "Already at the first
          column" to be consistent with the other movement error messages
        + Remove documentation files not explicitly under the 3-BSD license
        + Update header comment of all modified files
        + Reformat the ChangeLog to break lines at 76 columns
        + Convert tabs to spaces and adjust source indentation with `cppi`
        + Update docs; Markdown-ify `LICENSE` and rename to `LICENSE.md`

OpenVi 7.0.8 -> OpenVi 7.0.9: Mon Jan 31 21:43:08 2022
        + Add a missing include to fix compilation on Void with musl libc
        + Update `README.md`
